fixed spacing of kitchen buttons

--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,10 @@ header.masthead p {
 /* KITCHEN SPECIFIC STYLING */
 .kitchen-button {
 	cursor:pointer;
-	margin:30px;
+	margin-top:30px;
+	margin-bottom:30px;
+	margin-left: 10px;
+	margin-right:10px;
 	padding:5px;
 	padding-left: 20px;
 	padding-right: 20px;
